--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,23 @@
 
   {% include head.html %}
 
-  <body class="theme-base-08">
+  <body>
 
-    {% include sidebar.html %}
+    <div class="container content">
+      <div class="masthead">
+        <h3 class="masthead-title">
+          <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
+          <small>{{ site.tagline }}</small>
+        </h3>
+      </div>
 
-    <div class="content container">
       {{ content }}
+
+      <div class="footer">
+        <p>
+          &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+        </p>
+      </div>
     </div>
 
   </body>
