--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -214,3 +214,12 @@ body {
 .com{
     color: #999;
 } 
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 568px) and (orientation : portrait) {
+    .card-container, .front, .back {
+        width: 50%;
+        height: 420px;
+        margin: 0 auto;
+        border-radius: 4px;
+    }
+}
