--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -217,9 +217,14 @@ body {
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 568px) and (orientation : portrait) {
     .card-container, .front, .back {
-        width: 50%;
+        width: 350px;
         height: 420px;
         margin: 0 auto;
         border-radius: 4px;
+    }
+
+    .bg {
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 }
