--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -217,7 +217,7 @@ body {
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 568px) and (orientation : portrait) {
     .card-container, .front, .back {
-        width: 350px;
+        width: 100%;
         height: 420px;
         margin: 0 auto;
         border-radius: 4px;
