--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -215,7 +215,7 @@ body {
     color: #999;
 } 
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 1080px){
+@media only screen and (max-device-width : 480px){
     .card-container, .front, .back {
         width: 100%;
         height: 420px;
