--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -226,6 +226,7 @@ body {
     }
 
     .bg {
+        background-image: url(http://i.imgur.com/J1K5MJa.jpg) no-repeat center center fixed;
         background-size: cover;
     }
 }
