--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -228,5 +228,6 @@ body {
     .bg {
         background-image: url(http://i.imgur.com/J1K5MJa.jpg) no-repeat center center fixed;
         background-size: cover;
+        min-height: 100%;
     }
 }
