--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -3,12 +3,24 @@ body {
 	font-size: 14px;
 	font-family: "Helvetica Nueue",Arial,Verdana,sans-serif;
 }
-.bg {
+body {
+    background-color: #000; 
+    background-image: url(http://i.imgur.com/J1K5MJa.jpg);
+    background-repeat: no-repeat; 
+    background-position: center;
+    background-attachment: fixed;       
+    webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; 
+}   
+
+/*.bg {
     background-image: url(http://i.imgur.com/J1K5MJa.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 0;
-}
+}*/
 /* entire container, keeps perspective */
 .card-container {
 	  -webkit-perspective: 800px;
