--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -7,6 +7,7 @@ body {
     background-image: url(http://i.imgur.com/J1K5MJa.jpg);
     background-repeat: no-repeat; 
     background-position: center;
+    background-attachment: fixed;       
     webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
