--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -231,7 +231,7 @@ body {
 @media only screen and (max-device-width : 480px){
     .card-container, .front, .back {
         width: 50%;
-        height: auto;
+        height: 450px;
         margin: 0 auto;
         border-radius: 4px;
     }
