--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -235,4 +235,14 @@ body {
         margin: 0 auto;
         border-radius: 4px;
     }
+
+    body {
+        background-image: url(http://i.imgur.com/J1K5MJa.jpg);
+        background-repeat: no-repeat; 
+        background-position: center;
+        webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover; 
+    }   
 }
