--- a/css/rotating-card.css
+++ b/css/rotating-card.css
@@ -239,6 +239,6 @@ body {
     body {
         background-image: url(http://i.imgur.com/J1K5MJa.jpg);
         background-repeat: no-repeat; 
-        background-size: cover; 
+        background-size: contain; 
     }   
 }
