--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -229,7 +229,7 @@ pre {
 .wrapper {
     max-width: 600px;
     margin: 0 auto;
-    padding: 50px 0px;
+    padding: 120px 0px 0px 0px;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
