--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,5 @@
 ---
+# Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
 
@@ -117,5 +118,6 @@ $to:    #58C3FF;
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "portfolio"
 ;
