--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -33,7 +33,7 @@
   margin-left: 30px;
 }
 
-.project-thumbnail {
+.thumbnail {
   display: inline-block;
   width: 250px;
   height: 180px;
@@ -79,4 +79,34 @@
 
 .link:hover:after {
   margin-left: 10px;
+}
+
+@media (max-width:600px) {
+  .post-header {
+    margin-bottom: 0px;
+    text-align: center;
+  }
+
+  .post h1 {
+    margin-bottom: 0px;
+  }
+
+  .project {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 15px;
+    width: 100%;
+  }
+
+  .project-info {
+    margin-left: 0px;
+  }
+
+  .thumbnail {
+    display: none;
+  }
+
+  .description {
+    font-size: 100%;
+  }
 }
