--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -39,6 +39,8 @@
   height: 180px;
   min-width: 250px;
   min-height: 180px;
+  border: 1px solid #323232;
+  border-radius: 5px;
 }
 
 .project h1 {
