--- a/css/main.scss
+++ b/css/main.scss
@@ -74,8 +74,8 @@ $base-line-height: 1.7;
 
 $spacing-unit:     30px;
 
-$text-color:       #000;
-$background-color: #fff;
+$text-color:       #fff;
+$background-color: #242424;
 $brand-color:      #F26452;
 
 $grey-color:       #828282;
