--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,7 +14,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 
 /* Spacing */
-.post h1, h3, h4, h5, p, .post-body ul, #post-list li, pre {
+.post h1, h3, h4, h5, p, .post-body ul, rli, pre {
 margin-bottom: 20px;
 }
 
@@ -110,7 +110,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size: 30px;
     letter-spacing: -1px;
-    color: #222;
+    color: #fff;
     font-weight: bold;;
 }
 
