--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,12 +21,12 @@ layout: default
 
   <hr>
 
-  <div class="related">
+  <!-- <div class="related">
     <h2>Related</h2>
     {% for post in site.related_posts limit:3 %}
       <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}
        &nbsp; <span class="post-meta">{{ post.date | date: "%B %d, %Y" }}</span></a>
     {% endfor %}
-  </div>
+  </div> -->
 
 </div>
